package Ingredient;

public abstract class Cheese {}
