package Ingredient;

public abstract class Clams {}
