package Ingredient;

public abstract class Dough {}
