package Ingredient;

public class FreshClams extends Clams {
    
}
