package Ingredient;

public class FrozenClams extends Clams {
    
}
