package Ingredient;

public class MarinaraSauce extends Sauce {
    
}
