package Ingredient;

public class MozzarellaCheese extends Cheese {
    
}
