package Ingredient;

public class PlumTomatoSauce extends Sauce {
    
}
