package Ingredient;

public class ReggianoCheese extends Cheese {
    
}
