package Ingredient;

public abstract class Sauce {}