package Ingredient;

public class ThickCrustDough extends Dough {
    
}
