package Ingredient;

public class ThinCrustDough extends Dough {
    
}
